# ROS

./: .~lock.part2_new.ods#  example.txt  out_graphs_1.odt  out_graphs_2.odt  part1.txt  part1_new.ods  part2.ods  part2.txt  part2_new.ods  test.txt
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/include/meno_matky_za_slobodna/: Draw.h  DrawRequest.h  DrawResponse.h  Start.h  StartRequest.h  StartResponse.h  Stop.h  StopRequest.h  StopResponse.h
devel/include/rrm_cv1/: Draw.h  DrawRequest.h  DrawResponse.h
devel/lib/: libmoveit_lerp_planner_plugin.so.0.1.0
devel/lib/abb_config/: abb_config
devel/lib/eigen_example/: eigen_example
devel/lib/ik_solver_example/: ik_solver_example
devel/lib/meno_matky_za_slobodna/: turtle_control
devel/lib/moveit_tutorials/: bag_publisher_maintain_time  bullet_collision_checker_tutorial  detect_and_add_cylinder_collision_object_demo  lerp_example  motion_planning_api_tutorial  motion_planning_pipeline_tutorial  move_group_interface_tutorial  move_group_python_interface_tutorial.py  moveit_cpp_tutorial  pick_place_tutorial  planning_scene_ros_api_tutorial  planning_scene_tutorial  robot_model_and_robot_state_tutorial  ros_api_tutorial  state_display_tutorial  subframes_tutorial  trajopt_example  visualizing_collisions_tutorial
devel/lib/pkgconfig/: abb_config.pc  abb_crb15000_support.pc  abb_irb1200_5_90_moveit_config.pc  abb_irb1200_7_70_moveit_config.pc  abb_irb1200_gazebo.pc  abb_irb1200_support.pc  abb_irb120_gazebo.pc  abb_irb120_moveit_config.pc  abb_irb120_support.pc  abb_irb120t_moveit_config.pc  abb_irb1600_6_12_moveit_config.pc  abb_irb1600_support.pc  abb_irb2400_moveit_config.pc  abb_irb2400_moveit_plugins.pc  abb_irb2400_support.pc  abb_irb2600_support.pc  abb_irb4400_support.pc  abb_irb4600_60_205_ikfast.pc  abb_irb4600_support.pc  abb_irb52_support.pc  abb_irb5400_support.pc  abb_irb6600_support.pc  abb_irb6640_moveit_config.pc  abb_irb6640_support.pc  abb_irb6650s_support.pc  abb_irb6700_support.pc  abb_irb7600_support.pc  abb_model.pc  abb_moveit_config.pc  abb_resources.pc  eigen_example.pc  ik_solver_example.pc  meno_matky_za_slobodna.pc  moveit_tutorials.pc  rrm_cv1.pc  rrm_cv3_kocur.pc  rrm_cv3_ridilla.pc  rrm_cv3_szepvolgyi.pc  trajectory_visualization.pc
devel/lib/rrm_cv1/: turtle_control
devel/lib/rrm_cv3_kocur/: tf_broadcaster_node
devel/lib/rrm_cv3_ridilla/: tf_broadcaster_node
devel/lib/rrm_cv3_szepvolgyi/: tf_broadcaster_node
devel/lib/trajectory_visualization/: trajectory_visualization
src/abb_config/: .setup_assistant  CMakeLists.txt  package.xml  patagonia.stl  tool.stl
src/abb_config/config/: abb_irb4600_20_250.srdf  gazebo_abb_irb4600_20_250.urdf  joint_limits.yaml
src/abb_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/abb_config/src/: moveit_tutorial.cpp
src/abb_config/urdf/: measurement_tool.urdf  measurement_tool.xacro
src/abb_moveit_config/: .setup_assistant  package.xml
src/abb_moveit_config/config/: abb_irb1200_5_90.srdf  fake_controllers.yaml  gazebo_abb_irb1200_5_90.urdf
src/abb_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/meno_matky_za_slobodna/: CMakeLists.txt  package.xml
src/meno_matky_za_slobodna/config/: turtle_config.yaml
src/meno_matky_za_slobodna/launch/: turtle_control.launch
src/meno_matky_za_slobodna/src/: turtle_control.cpp  turtle_control_node.cpp
src/meno_matky_za_slobodna/srv/: Draw.srv
src/rrm_cv3/launch/: robot_state_publisher.launch
src/rrm_cv3_kocur/: CMakeLists.txt  package.xml
src/rrm_cv3_ridilla/: CMakeLists.txt  package.xml
src/rrm_cv3_szepvolgyi/: CMakeLists.txt
src/rrm_cv9/eigen_example/: CMakeLists.txt
src/rrm_cv9/eigen_example/src/: eigen_example.cpp
src/rrm_cv9/trajectory_visualization/: CMakeLists.txt  package.xml
src/rrm_cv9/trajectory_visualization/src/: trajectory_visualization.cpp  trajectory_visualization_part2.cpp
src/rrm_cv9/trajectory_visualization_part2/: CMakeLists.txt  package.xml
src/rrm_cv9/trajectory_visualization_part2/include/: IK_Solver.h  matrixes.h
src/rrm_cv9/trajectory_visualization_part2/src/: IK_Solver.cpp  k.cpp  matrixes.cpp  trajectory_visualization_part2.cpp
(+97 files in other folders)
